--- a/dada/extras/documentation/pod_source/changes_4_x.pod
+++ b/dada/extras/documentation/pod_source/changes_4_x.pod
@@ -2,6 +2,82 @@
 
 =head1 Dada Mail Changelog for version 4.x.x
 
+=head1 4.3.1
+
+=head2 Changes 4.3.1
+
+=head3 Template Changes 4.3.1
+
+Bugs were found in a few of the templates Dada Mail uses - the following templates have
+changes in them: 
+
+=over
+
+=item * dada/DADA/Template/templates/list_options_screen.tmpl
+
+=item * $MAILING_LIST_MESSAGE_HTML
+
+=back
+
+=head3 SOAP examples for subscribing including 
+
+Some SOAP proof of concept files have been included in, I<dada/extras/scripts/SOAP> 
+
+They can be read at: 
+
+L<http://dadamailproject.com/d/README_SOAP.pod/html>
+
+They include a server written in Perl and clients written in Perl and php. They are also documented in the Subscription Cookbook
+
+They are, in fact, Proof of Concepts and are not complete applications. 
+
+
+=head3 Code Cleanup
+
+github user masktos (Mark Stosberg) was kind enough to refactor a ton 
+code into Dada Mail, having to do with Modern Perl/Perl Best Practices coding. 
+Thanks, Mark! Some of the things he worked on include, 
+
+=over
+
+=item * simplifying and optimizing URI encoding/decoding
+
+=item * changing foreach() to for()
+
+=item * Adding Params::Validate, FindBin to some Dada Mail API subroutine/methods
+
+=back
+
+=head2 Bug Fixes 4.3.1
+
+=head3 No tests for DADA::App::Guts::available_lists - why not? 
+
+https://github.com/justingit/dada-mail/issues/closed#issue/73
+
+=head3 reCAPTCHA settings in, Your Mailing List -> Mailing List Options always greyed out? 
+
+https://github.com/justingit/dada-mail/issues/closed#issue/90
+
+=head3 Requirements doc out of date
+
+https://github.com/justingit/dada-mail/issues/closed#issue/91
+
+=head3 Missing unordered list tags in $MAILING_LIST_MESSAGE_HTML template
+
+https://github.com/justingit/dada-mail/issues/closed#issue/93
+
+=head3 Dada Mail 4.3.0, FormatMessages.pm and Email Templates
+
+https://github.com/justingit/dada-mail/issues/closed#issue/92
+
+=head3 "Look Up Hostnames When Validating Email Addresses (MX Lookup)" cannot be enabled
+
+https://github.com/justingit/dada-mail/issues/closed#issue/97
+
+=head3 No .htaccess in .dada_files directory by default, when installing w/the installer
+
+https://github.com/justingit/dada-mail/issues/closed#issue/99
+
 =head1 4.3.0
 
 Installation instructions for 4.3.0 are the same as they were for 4.2.0. 
