--- a/dada/extras/documentation/pod_source/install_dada_mail.pod
+++ b/dada/extras/documentation/pod_source/install_dada_mail.pod
@@ -15,9 +15,13 @@ Here's the direct download to Dada Mail v4.3.2:
 
 L<https://github.com/downloads/justingit/dada-mail/dada-4_3_2.tar.gz>
 
+=cut
+
 (If you have Pro Dada, you can download v4.3.2 of Pro Dada here:)
 
 L<http://dadamailproject.com/pro_dada/index.cgi?rm=download_file&filename=pro_dada-4_3_2.tar.gz>
+
+=pod
 
 Save the distribution to your Desktop Computer (you will B<not> have to uncompress the distribution) and then upload the, tar.gz file to your hosting account's I<cgi-bin>. 
 
@@ -25,7 +29,7 @@ Save the distribution to your Desktop Computer (you will B<not> have to uncompre
 
 Download the, C<uncompress_dada.cgi> script from here: 
 
-=for html <ul><li><strong><a href="https://github.com/justingit/dada-mail/raw/v4_3_2_stable-2011_01_16/uncompress_dada.cgi">uncompress_dada.cgi</a> (Save Page/Link As...)</strong></li></ul>
+=for html <ul><li><strong><a href="https://github.com/justingit/dada-mail/raw/v4_4_0_alpha1-2011_01_31/uncompress_dada.cgi">uncompress_dada.cgi</a> (Save Page/Link As...)</strong></li></ul>
 
 
 
